Update survey form

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form id="surveyForm">
+    <form id="surveyForm" action="https://api.sheetmonkey.io/form/dwD7MA9GQQbBrcUwPJu5r4" method="post">
         <h1>Compatibility Survey</h1>
         <div id="questionsContainer"></div>
+        <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
         <button type="button" onclick="calculateScore()">Submit</button>
     </form>
     <script src="script.js"></script>
