added date to response and redirect page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
         <br />
 
         <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
+	<input 
+   	 type="hidden" 
+   	 name="x-sheetmonkey-redirect" 
+    	value="https://docs.google.com/spreadsheets/d/1EqtD1HmZ1Oamp6O0Wu5t-JnjRCG1sxq_NdGh4UMrsHc/edit#gid=0" 
+/>
         <input type="submit" value="Submit" />
     </form>
 </body>
